--- a/crates/dojo-lang/Cargo.toml
+++ b/crates/dojo-lang/Cargo.toml
@@ -32,7 +32,7 @@ scarb.workspace = true
 semver.workspace = true
 serde.workspace = true
 serde_json.workspace = true
-serde_with = "2.3.1"
+serde_with.workspace = true
 smol_str.workspace = true
 thiserror = "1.0.32"
 tracing.workspace = true
