--- a/crates/katana-core/Cargo.toml
+++ b/crates/katana-core/Cargo.toml
@@ -17,10 +17,9 @@ starknet_api.workspace = true
 starknet.workspace = true
 thiserror.workspace = true
 serde.workspace = true
-serde_json = "1.0.70"
+serde_json.workspace = true
 cairo-lang-starknet.workspace = true
 rand = { version = "0.8.5", features = ["small_rng"] }
 lazy_static = "1.4.0"
 flate2 = "1.0.26"
-bincode = "1.3.3"
 serde_with.workspace = true
